fixes in multiplayer